--- a/src/Components/Responcive.css
+++ b/src/Components/Responcive.css
@@ -14,6 +14,8 @@
     }
     .searchpage__header__logo{
         margin-bottom: 20px;
+        width: 100px;
+        object-fit: contain;
     }
     .searchpage__header__icons{
         display: none;
@@ -22,6 +24,7 @@
         overflow-x: scroll;
         padding-left:10px ;
         padding-right:10px ;
+        margin-top: 10px;
     }
     .searchpage__body{
         margin-left: 0;
@@ -31,6 +34,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
+        font-size: 14px !important;
     }
     .searchpage__result__title{
         font-size: 20px !important;
